# agent

./: Cargo.toml  DEMO.md  Dockerfile  README.md  agent1_config.yaml  agent2_config.yaml  cleanup_demo.sh  config.yaml  docker-compose.yml  emqx_rule.json  setup_demo.sh  setup_emqx_rules.sh  test_message.sh
src/: check_compile.rs  cli.rs  config.rs  lib.rs  main.rs
src/io/: mod.rs  mqtt.rs  stdin.rs  stdout.rs  webhook.rs
src/providers/: anthropic.rs  example_provider.rs.template  mod.rs  openai.rs
