[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
atty = "0.2"
uuid = { version = "1.4", features = ["v4"] }
# HTTP server for webhook
axum = { version = "0.7", features = ["http1", "tokio"] }
tower-http = { version = "0.5", features = ["trace"] }
# For finding available ports
portpicker = "0.1"
# For daemon mode
daemonize = "0.5"
# For logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
